Added link to Github source code

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <body>
     <h1>GREETINGS! View Problem Solution in Developer Console</h1>
+    <h2>SourceCode on GitHub <a href="https://github.com/nicholas-schaefer/characterCountLimiter" target="blank">View Code Now!</a></h2>
     <script src="./init.js" async defer></script>
 </body>
 
